[package]
name = "prolog_service"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scryer-prolog = "0.10"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
