[package]
name = "prolog_service"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
scryer-prolog = "0.10"
dotenvy = "0.15"
flexi_logger = { version = "0.29.8", features = ["async"] }

log = "0.4"
once_cell = "1.19"


